fix: vusion下图片路径不对问题 & 隐藏iframe和linearlayout

--- a/src/radio-group/api.yaml
+++ b/src/radio-group/api.yaml
@@ -39,7 +39,7 @@
         - value: vertical
           title: 垂直
       default: horizontal
-      description: 是否禁用
+      description: 排列方向
   slots:
     - name: default
       description: 插入`<van-radio>`子组件。
