--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "cloud-ui.vusion": "^0.14.13",
     "lodash": "^4.17.21",
+    "online-svg-icon-vue2": "^1.2.3",
     "swiper": "^7.4.1",
     "vconsole": "^3.9.3",
     "vue-lazyload": "1.2.3"
