--- a/src/for-components/api.yaml
+++ b/src/for-components/api.yaml
@@ -13,6 +13,7 @@
       title: 数据类型
       type: schema
       description: 组件列表每一项的结构
+      advanced: true
       compType: dataTypeComsItem
     - name: colnum
       title: 每行排列项数
