--- a/packages/create-vant-cli-app/package.json
+++ b/packages/create-vant-cli-app/package.json
@@ -24,10 +24,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/youzan/vant.git",
+    "url": "https://github.com/vant-ui/vant.git",
     "directory": "packages/create-vant-cli-app"
   },
-  "bugs": "https://github.com/youzan/vant/issues",
+  "bugs": "https://github.com/vant-ui/vant/issues",
   "author": "chenjiahan",
   "license": "MIT",
   "devDependencies": {
@@ -40,7 +40,6 @@
     "consola": "^2.11.3",
     "fast-glob": "^3.2.4",
     "fs-extra": "^10.0.0",
-    "inquirer": "^8.0.0",
     "picocolors": "^1.0.0"
   },
   "release-it": {
