--- a/packages/vant-markdown-vetur/package.json
+++ b/packages/vant-markdown-vetur/package.json
@@ -18,10 +18,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/youzan/vant.git",
+    "url": "https://github.com/vant-ui/vant.git",
     "directory": "packages/vant-markdown-vetur"
   },
-  "bugs": "https://github.com/youzan/vant/issues",
+  "bugs": "https://github.com/vant-ui/vant/issues",
   "author": "zhangshuai",
   "license": "MIT",
   "dependencies": {
