feat: 放开线性布局 & 栅格布局文案修改 背景修改

--- a/src/stepper/api.yaml
+++ b/src/stepper/api.yaml
@@ -1,8 +1,8 @@
 - name: van-stepper
-  title: 步进器
+  title: 数字输入
   labels:
     - Form
-  icon: stepper
+  icon: number
   next: true
   nested: false
   attrs:
