--- a/src/row/api.yaml
+++ b/src/row/api.yaml
@@ -50,7 +50,7 @@
   slots:
     - name: default
       description: 插入`<van-col>`子组件。
-      empty-background: add-sub-large
+      empty-background: add-sub
       support:
         - name: van-col
           title: 插入一列
@@ -65,12 +65,12 @@
       title: 占据列数
       type: number
       default: 8
-      description: 列元素宽度
+      description: 栅格列宽度，栅格行最大为24列
     - name: offset
       title: 偏移
       type: number, string
       default: 0
-      description: 列偏移宽度（计算方式与 span 相同）
+      description: 栅格列向右偏移列数
   slots:
     - name: default
       description: 插入需要布局的元素。
