fix: van-tabs 默认关掉切换动画等开关，防止用户在内部使用带有定位组件出问题

--- a/src/tabs/api.yaml
+++ b/src/tabs/api.yaml
@@ -30,12 +30,12 @@
     - name: sticky
       title: 自动吸顶
       type: boolean
-      default: true
+      default: false
       description: 是否自动吸顶
     - name: swipeable
       title: 滑动切换
       type: boolean
-      default: true
+      default: false
       description: 是否滑动切换
     - name: scrollspystr
       title: 导航模式
@@ -50,7 +50,7 @@
     - name: animated
       title: 切换动画
       type: boolean
-      default: true
+      default: false
       description: 是否开启转场动画
   slots:
     - name: default
