--- a/src-vusion/components/list-view/api.yaml
+++ b/src-vusion/components/list-view/api.yaml
@@ -112,7 +112,7 @@
       title: 分页大小
       type: number
       default: 20
-      description: 分页大小
+      description: 分页过小可能会导致滚动加载更多失效
     - name: remote-paging
       title: 是否需要后端分页
       type: boolean
