--- a/src/sidebar/api.yaml
+++ b/src/sidebar/api.yaml
@@ -19,7 +19,7 @@
   slots:
     - name: default
       description: 插入`<van-sidebar-item>`子组件。
-      empty-background: add-sub-large
+      empty-background: add-sub
       support:
         - name: van-sidebar-item
           title: 菜单项
