--- a/src/tabbar/api.yaml
+++ b/src/tabbar/api.yaml
@@ -29,7 +29,7 @@
   slots:
     - name: default
       description: 插入`<van-tabbar-item>`子组件。
-      empty-background: add-sub-large
+      empty-background: add-sub
       support:
         - name: van-tabbar-item
           title: 菜单项
