fix: 部分组件配置修改

--- a/src-vusion/components/linear-layout/api.yaml
+++ b/src-vusion/components/linear-layout/api.yaml
@@ -102,3 +102,12 @@
   slots:
     - name: default
       description: 内容
+  events:
+    - name: click
+      title: 点击后
+      description: 点击此项时触发
+      params: []
+    - name: dblclick
+      title: 双击
+      description: 双击此项时触发
+      params: []
