feat: 优化变单点击加号以后 无法拖入组件

--- a/src/form/api.yaml
+++ b/src/form/api.yaml
@@ -38,7 +38,7 @@
       support:
         - name: van-field
           title: 表单项
-          snippet: '<van-field label="表单项" drole="other"></van-field>'
+          snippet: '<van-field label="表单项" drole="other"><template #input></template></van-field>'
   events:
     - name: submit
       title: 验证通过
