--- a/packages/vant-touch-emulator/package.json
+++ b/packages/vant-touch-emulator/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@vant/touch-emulator",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "Vant touch emulator",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "scripts": {
+    "build": "node ./build.js",
+    "prepare": "pnpm build"
+  },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
