--- a/src/form/api.yaml
+++ b/src/form/api.yaml
@@ -38,7 +38,7 @@
       support:
         - name: van-field
           title: 表单项
-          snippet: '<van-field label="表单项" drole="other"><template #input></template></van-field>'
+          snippet: '<van-field drole="other"><template #title><van-text>表单项<van-text></template><template #input></template></van-field>'
   events:
     - name: submit
       title: 验证通过
