--- a/src/cascader/api.yaml
+++ b/src/cascader/api.yaml
@@ -52,6 +52,18 @@
       default: "{'text':'','value':'','children':'children'}"
       description: 自定义 options 结构中的字段
       advanced: true
+    - name: input-align
+      title: 右侧内容对齐方式
+      type: string
+      options:
+        - value: left
+          title: 左
+        - value: center
+          title: 中
+        - value: right
+          title: 右
+      default: right
+      description: 右侧内容对齐方式
     - name: close-on-click-overlay
       title: 点击遮罩层后关闭
       type: boolean
