--- a/src/calendar/api.yaml
+++ b/src/calendar/api.yaml
@@ -49,6 +49,18 @@
       type: boolean
       default: false
       description: 是否禁用
+    - name: input-align
+      title: 右侧内容对齐方式
+      type: string
+      options:
+        - value: left
+          title: 左
+        - value: center
+          title: 中
+        - value: right
+          title: 右
+      default: right
+      description: 右侧内容对齐方式
     - name: close-on-click-overlay
       title: 点击遮罩层后关闭
       type: boolean
