feat: popover-com 子组件调整 1

--- a/src/popover-combination/api.yaml
+++ b/src/popover-combination/api.yaml
@@ -92,6 +92,7 @@
       title: 标题
       type: string
       default: 标题
+      advanced: true
       description: 标题
     - name: disabled
       title: 是否禁用
