fix: 文本组件 只支持click事件

--- a/src/text/api.yaml
+++ b/src/text/api.yaml
@@ -70,7 +70,7 @@
       default: normal
       description: 文本过长的处理方式
   events:
-    - name: $listeners
-      title: 监听事件
-      description: 监听所有`<span>`元素的事件。
+    - name: click
+      title: 点击后
+      description: 点击此项时触发
       params: []
