--- a/package.json
+++ b/package.json
@@ -98,11 +98,11 @@
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "2.1.0",
     "shx": "^0.3.3",
-    "vue": "^2.6.12",
+    "vue": "2.6.12",
     "vue-cli-plugin-vusion": "^0.14.0",
     "vue-i18n": "^8.26.0",
     "vue-router": "^3.5.2",
-    "vue-template-compiler": "^2.6.12",
+    "vue-template-compiler": "2.6.12",
     "vusion": "^0.12.18",
     "vusion-api": "^0.7.36",
     "yaml": "^1.10.2"
