--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -39,56 +39,56 @@
   "author": "chenjiahan",
   "license": "MIT",
   "devDependencies": {
+    "@jest/types": "^27.5.1",
     "@types/fs-extra": "^9.0.13",
     "@types/less": "^3.0.3",
     "@types/markdown-it": "^12.2.3",
-    "@jest/types": "^27",
-    "vue": "^3.2.27",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vue": "^3.2.38"
   },
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@docsearch/css": "^3.0.0",
-    "@docsearch/js": "^3.0.0",
-    "@types/jest": "^27.0.3",
-    "@vant/eslint-config": "^3.3.2",
-    "@vant/touch-emulator": "^1.3.2",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "@babel/core": "^7.18.13",
+    "@babel/preset-typescript": "^7.18.6",
+    "@docsearch/css": "^3.2.1",
+    "@docsearch/js": "^3.2.1",
+    "@types/jest": "^27.5.2",
+    "@vant/eslint-config": "^3.5.0",
+    "@vant/touch-emulator": "^1.4.0",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/babel-plugin-jsx": "^1.1.1",
-    "autoprefixer": "^10.4.0",
-    "commander": "^9.3.0",
+    "autoprefixer": "^10.4.8",
+    "commander": "^9.4.0",
     "consola": "^2.15.3",
-    "conventional-changelog": "^3.1.24",
-    "esbuild": "^0.14.29",
-    "eslint": "^8.1.0",
+    "conventional-changelog": "^3.1.25",
+    "esbuild": "^0.14.54",
+    "eslint": "^8.23.0",
     "execa": "^5.1.1",
-    "fast-glob": "^3.2.7",
-    "fs-extra": "^10.0.0",
+    "fast-glob": "^3.2.11",
+    "fs-extra": "^10.1.0",
     "hash-sum": "^2.0.0",
-    "highlight.js": "^11.3.1",
+    "highlight.js": "^11.6.0",
     "husky": "^8.0.1",
-    "jest": "^27.3.1",
-    "jest-canvas-mock": "^2.3.1",
+    "jest": "^27.5.1",
+    "jest-canvas-mock": "^2.4.0",
     "jest-serializer-html": "^7.1.0",
-    "less": "^4.1.2",
-    "markdown-it": "^12.2.0",
-    "markdown-it-anchor": "^8.4.1",
+    "less": "^4.1.3",
+    "markdown-it": "^12.3.2",
+    "markdown-it-anchor": "^8.6.4",
     "nano-staged": "^0.8.0",
     "nanospinner": "^1.1.0",
     "picocolors": "^1.0.0",
-    "postcss": "^8.3.11",
-    "postcss-load-config": "^3.1.0",
-    "prettier": "^2.5.0",
-    "release-it": "^15.1.1",
-    "transliteration": "^2.2.0",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.0",
-    "vite-plugin-html": "^2.1.1",
-    "vite-plugin-md": "^0.11.4",
-    "vue-router": "^4.0.12"
+    "postcss": "^8.4.16",
+    "postcss-load-config": "^3.1.4",
+    "prettier": "^2.7.1",
+    "release-it": "^15.4.1",
+    "transliteration": "^2.3.5",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9",
+    "vite-plugin-html": "^2.1.2",
+    "vite-plugin-md": "^0.11.9",
+    "vue-router": "^4.1.5"
   },
   "release-it": {
     "git": {
