--- a/src/row/api.yaml
+++ b/src/row/api.yaml
@@ -22,13 +22,13 @@
       type: string
       options:
         - value: '0'
-          title: 无
+          title: 无（0）
         - value: '10'
-          title: 小
+          title: 小（10）
         - value: '20'
-          title: 正常
+          title: 正常（20）
         - value: '30'
-          title: 大
+          title: 大（30）
       default: '0'
       description: 列元素之间的间距（单位为 px）
     - name: justify
@@ -41,10 +41,10 @@
           title: 居中对齐
         - value: end
           title: 右对齐
-        - value: space-around
-          title: 环绕对齐
         - value: space-between
-          title: 两端对齐
+          title:  水平分布-左右不留空
+        - value: space-around
+          title: 水平分布-左右留空
       default: start
       description: flex布局对齐方式
   slots:
