--- a/src/badge/api.yaml
+++ b/src/badge/api.yaml
@@ -20,5 +20,6 @@
       type: number
       description: 徽章最大值
   slots:
-    - name: default
+    - concept: Slot
+      name: default
       description: 插入徽章内容
