--- a/src/collapse/api.yaml
+++ b/src/collapse/api.yaml
@@ -17,7 +17,8 @@
       default: false
       description: 是否开启手风琴模式
   slots:
-    - name: default
+    - concept: Slot
+      name: default
       description: 插入`<van-collapse-item>`子组件。
       empty-background: add-sub-large
       support:
