--- a/src/popover/api.yaml
+++ b/src/popover/api.yaml
@@ -62,7 +62,8 @@
       default: light
       description: 弹出位置
   slots:
-    - name: default
+    - concept: Slot
+      name: default
       description: 插入`<van-popover-item>`子组件。
       empty-background: add-sub-large
       support:
