--- a/src/checkbox-group/api.yaml
+++ b/src/checkbox-group/api.yaml
@@ -45,7 +45,8 @@
       default: horizontal
       description: 是否禁用
   slots:
-    - name: default
+    - concept: Slot
+      name: default
       description: 插入`<van-checkbox>`子组件。
       empty-background: add-sub
       support:
