--- a/src/dialog/api.yaml
+++ b/src/dialog/api.yaml
@@ -30,7 +30,8 @@
       default: false
       description: 是否点击遮罩层后关闭
   slots:
-    - name: default
+    - concept: Slot
+      name: default
       description: 内容自定义
   events:
     - name: open
