--- a/src/for-components/api.yaml
+++ b/src/for-components/api.yaml
@@ -25,5 +25,6 @@
       default: true
       description: 是否均分宽度
   slots:
-    - name: default
+    - concept: Slot
+      name: default
       description: 内容自定义
