--- a/src/radio-group/api.yaml
+++ b/src/radio-group/api.yaml
@@ -41,7 +41,8 @@
       default: horizontal
       description: 排列方向
   slots:
-    - name: default
+    - concept: Slot
+      name: default
       description: 插入`<van-radio>`子组件。
       empty-background: add-sub
       support:
