--- a/src/sidebar/api.yaml
+++ b/src/sidebar/api.yaml
@@ -17,7 +17,8 @@
       default: true
       description: 是否开启路由模式
   slots:
-    - name: default
+    - concept: Slot
+      name: default
       description: 插入`<van-sidebar-item>`子组件。
       empty-background: add-sub
       support:
