feat: 上传组件支持配置文件存储策略

--- a/src/uploader/api.yaml
+++ b/src/uploader/api.yaml
@@ -10,7 +10,7 @@
       type: Array
       sync: true
       model: true
-      default2: "[]"
+      default2: '[]'
       description: 已上传的文件列表
     - name: name
       title: 上传的文件字段名
@@ -111,6 +111,29 @@
       type: boolean
       default: false
       description: 是否禁用
+    - name: access
+      title: '文件访问策略'
+      type: string
+      default: 'public'
+      options:
+        - value: public
+          title: 任何人可访问
+        - value: private
+          title: 用户登录后可访问
+    - name: ttl
+      title: 文件有效期
+      type: boolean
+      default: false
+      description: 是否开启文件有效期控制
+    - name: ttlValue
+      title: 上传后有效天数
+      type: number
+      default: ''
+      description: 文件有效期天数
+      # 此属性依赖的属性
+      depProp:
+        - name: ttl
+          value: true
   slots: false
   events:
     - name: click-upload
