chore: update deploy website action

--- a/.github/workflows/deploy-v2-site.yml
+++ b/.github/workflows/deploy-v2-site.yml
@@ -24,8 +24,17 @@ jobs:
         run: npx --no-install vant-cli build-site
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.1
+        uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
           branch: gh-pages
           folder: site
           target-folder: v2
+
+      - name: Deploy for GitHub 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.4.0
+        with:
+          branch: main
+          folder: packages/vant/site-dist
+          token: ${{ secrets.VANT_UI_TOKEN }}
+          repository-name: vant-ui/vant-ui.github.io
+          target-folder: vant/v2
