--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -85,7 +85,7 @@
     "release-it": "^15.4.1",
     "transliteration": "^2.3.5",
     "typescript": "^4.8.2",
-    "vite": "^3.1.3",
+    "vite": "3.0.9",
     "vite-plugin-html": "^2.1.2",
     "vite-plugin-md": "^0.11.9",
     "vue-router": "^4.1.5"
