--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -39,7 +39,7 @@
   "author": "chenjiahan",
   "license": "MIT",
   "devDependencies": {
-    "@jest/types": "^27.5.1",
+    "@jest/types": "^29.1.2",
     "@types/fs-extra": "^9.0.13",
     "@types/less": "^3.0.3",
     "@types/markdown-it": "^12.2.3",
@@ -52,7 +52,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@docsearch/css": "^3.2.1",
     "@docsearch/js": "^3.2.1",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.1.1",
     "@vant/eslint-config": "^3.5.0",
     "@vant/touch-emulator": "^1.4.0",
     "@vitejs/plugin-vue": "^3.0.3",
@@ -70,9 +70,10 @@
     "hash-sum": "^2.0.0",
     "highlight.js": "^11.6.0",
     "husky": "^8.0.1",
-    "jest": "^27.5.1",
+    "jest": "^29.1.2",
     "jest-canvas-mock": "^2.4.0",
     "jest-serializer-html": "^7.1.0",
+    "jest-environment-jsdom": "^29.1.2",
     "less": "^4.1.3",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.6.4",
