--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vant/cli",
-  "version": "5.0.0-beta.0",
+  "version": "5.0.1",
   "type": "module",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
