--- a/src/datetime-picker/api.yaml
+++ b/src/datetime-picker/api.yaml
@@ -21,6 +21,19 @@
         - value: datetime
           title: 日期时间选择器
       default: datetime
+    - name: converter
+      title: 转换器
+      type: string
+      options:
+        - title: yyyy/MM/dd HH:mm:ss
+          value: format
+        - title: Unix 时间戳
+          value: timestamp
+      default: format
+      # 此属性依赖的属性
+      depProp:
+        - name: type
+          value: datetime
     - name: value
       title: 值
       type: string,number,Date
